--- a/config/HwConfigBBBlue.json
+++ b/config/HwConfigBBBlue.json
@@ -71,11 +71,16 @@
 				"signalId": "motor1",
 				"scale": [ { "id" : "dac",
 							"minIn": 	-1.0, 	"maxIn": 	1.0,
-							"minOut": 	-8.2, 	"maxOut": 	8.2 }
-					 ],
+							"minOut": 	-8.2, 	"maxOut": 	8.2 },
+							{ "id" : "inv",
+							"scale": -1.0, "offset": 0.0 }
+					],
 				"range": [ { "id" : "dac",
 							"minIn": 	-1.0, 	"maxIn": 	1.0,
-							"minOut": 	-8.2, 	"maxOut": 	8.2 }
+							"minOut": 	-8.2, 	"maxOut": 	8.2 },
+							{ "id" : "inv",
+							"minIn": 	-8.2, 	"maxIn": 	8.2,
+							"minOut": 	 8.2, 	"maxOut":  -8.2 }
 					 ],
 				"unit": "V"
 			},
@@ -83,16 +88,11 @@
 				"signalId": "motor2",
 				"scale": [ { "id" : "dac",
 							"minIn": 	-1.0, 	"maxIn": 	1.0,
-							"minOut": 	-8.2, 	"maxOut": 	8.2 },
-							{ "id" : "inv",
-							"scale": -1.0, "offset": 0.0 }
+							"minOut": 	-8.2, 	"maxOut": 	8.2 }
 					 ],
 				"range": [ { "id" : "dac",
 							"minIn": 	-1.0, 	"maxIn": 	1.0,
-							"minOut": 	-8.2, 	"maxOut": 	8.2 },
-							{ "id" : "inv",
-							"minIn": 	-8.2, 	"maxIn": 	8.2,
-							"minOut": 	 8.2, 	"maxOut":  -8.2 }
+							"minOut": 	-8.2, 	"maxOut": 	8.2 }
 					 ],
 				"unit": "V"
 			},
@@ -173,36 +173,7 @@
 			"type": "Fqd",
 			"channel1": {
 				"signalId": "enc1",
-				"scale": [ { "id" : "wheel",
-							"minIn": 	0, "maxIn": 1,
-							"minOut":	0, "maxOut": 25 },
-							{ "id" : "gear",
-							"minIn": 	0, "maxIn": 104,
-							"minOut":	0, "maxOut": 3441 },
-							{ "id" : "enc",
-							"minIn": 	0, "maxIn": 6.283185307,
-							"minOut":	0, "maxOut": 16 },
-							{ "id" : "fqd",
-							"minIn": 	0, "maxIn": 1,
-							"minOut":	0, "maxOut": 4 }
-					 ],
-				"range": [ { "id" : "wheel",
-							"noLimit": 	true },
-							{ "id" : "gear",
-							"noLimit": 	true },
-							{ "id" : "enc",
-							"noLimit": 	true },
-							{ "id" : "fqd",
-							"noLimit": 	true }
-					 ],
-				"unit": "rad"
-			},
-			"channel2": {
-				"signalId": "enc2",
-				"scale": [ { "id" : "wheel",
-							"minIn": 	0, "maxIn": 1,
-							"minOut":	0, "maxOut": 25 },
-							{ "id" : "gear",
+				"scale": [ { "id" : "gear",
 							"minIn": 	0, "maxIn": 104,
 							"minOut":	0, "maxOut": 3441 },
 							{ "id" : "enc",
@@ -215,15 +186,34 @@
 							"minIn": 	1.0, "maxIn": -1.0,
 							"minOut":	-1.0, "maxOut": 1.0 }
 					 ],
-				"range": [ { "id" : "wheel",
-							"noLimit": 	true },
-							{ "id" : "gear",
+				"range": [ { "id" : "gear",
 							"noLimit": 	true },
 							{ "id" : "enc",
 							"noLimit": 	true },
 							{ "id" : "fqd",
 							"noLimit": 	true },
 							{ "id" : "inv",
+							"noLimit": 	true }
+					 ],
+				"unit": "rad"
+			},
+			"channel2": {
+				"signalId": "enc2",
+				"scale": [ { "id" : "gear",
+							"minIn": 	0, "maxIn": 1,
+							"minOut":	0, "maxOut": 33.086538461 },
+							{ "id" : "enc",
+							"minIn": 	0, "maxIn": 6.283185307,
+							"minOut":	0, "maxOut": 16 },
+							{ "id" : "fqd",
+							"minIn": 	0, "maxIn": 1,
+							"minOut":	0, "maxOut": 4 }
+					 ],
+				"range": [ { "id" : "gear",
+							"noLimit": 	true },
+							{ "id" : "enc",
+							"noLimit": 	true },
+							{ "id" : "fqd",
 							"noLimit": 	true }
 					 ],
 				"unit": "rad"
